--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           }
 
           try {
-            const response = await fetch('https://api.strnadi.cz/auth/change-password', {
+            const response = await fetch('https://api.strnadi.cz/forgotten-password', {
               method: 'POST',
               headers: { 'Content-Type': 'application/json' },
               body: JSON.stringify({
