--- a/index.html
+++ b/index.html
@@ -2,110 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Change Password</title>
-  <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+  <title>Success</title>
   <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-
-  <div x-data="changePasswordForm()" class="bg-white p-8 rounded-2xl shadow-lg w-full max-w-md">
-    <h2 class="text-2xl font-semibold mb-6 text-center text-gray-800">Change Password</h2>
-
-    <form @submit.prevent="submitForm" class="space-y-4">
-      <div>
-        <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-        <input type="email" id="email" x-model="email"
-          class="mt-1 w-full rounded-lg border border-gray-300 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
-          required>
-      </div>
-
-      <div>
-        <label for="new" class="block text-sm font-medium text-gray-700">New Password</label>
-        <input type="password" id="new" x-model="newPassword"
-          class="mt-1 w-full rounded-lg border border-gray-300 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
-          required>
-      </div>
-
-      <div>
-        <label for="confirm" class="block text-sm font-medium text-gray-700">Confirm New Password</label>
-        <input type="password" id="confirm" x-model="confirmPassword"
-          class="mt-1 w-full rounded-lg border border-gray-300 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
-          required>
-      </div>
-
-      <template x-if="error">
-        <div class="text-sm text-red-500" x-text="error"></div>
-      </template>
-
-      <template x-if="success">
-        <div class="text-sm text-green-600 font-medium" x-text="success"></div>
-      </template>
-
-      <button type="submit"
-        class="w-full bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition">
-        Submit
-      </button>
-    </form>
-  </div>
-
-  <script>
-    function changePasswordForm() {
-      return {
-        email: '',
-        newPassword: '',
-        confirmPassword: '',
-        error: '',
-        success: '',
-
-        async submitForm() {
-          this.error = '';
-          this.success = '';
-
-          // Frontend validation
-          if (!this.email.includes('@')) {
-            this.error = "Please enter a valid email.";
-            return;
-          }
-
-          if (this.newPassword !== this.confirmPassword) {
-            this.error = "Passwords do not match.";
-            return;
-          }
-
-          if (this.newPassword.length < 6) {
-            this.error = "Password must be at least 6 characters.";
-            return;
-          }
-
-          try {
-            const response = await fetch('https://api.strnadi.cz/forgotten-password', {
-              method: 'POST',
-              headers: { 'Content-Type': 'application/json' },
-              body: JSON.stringify({
-                email: this.email,
-                password: this.newPassword
-              })
-            });
-
-            if (!response.ok) {
-              const data = await response.json();
-              this.error = data.message || "Something went wrong.";
-              return;
-            }
-
-            const data = await response.json();
-            this.success = data.message || "Password changed successfully!";
-            this.email = '';
-            this.newPassword = '';
-            this.confirmPassword = '';
-
-          } catch (err) {
-            this.error = "Network error. Please try again.";
-          }
-        }
-      }
+  <style>
+    @keyframes pop {
+      0% { transform: scale(0.8); opacity: 0; }
+      100% { transform: scale(1); opacity: 1; }
     }
-  </script>
+
+    .animate-pop {
+      animation: pop 0.4s ease-out forwards;
+    }
+  </style>
+</head>
+<body class="bg-gradient-to-br from-blue-100 to-purple-200 flex items-center justify-center min-h-screen">
+
+  <div class="bg-white p-10 rounded-3xl shadow-xl text-center max-w-md w-full animate-pop">
+    <div class="flex justify-center mb-6">
+      <div class="bg-green-100 text-green-600 rounded-full p-4">
+        <!-- Checkmark icon -->
+        <svg class="w-8 h-8" fill="none" stroke="currentColor" stroke-width="2"
+             viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round" stroke-linejoin="round"
+                d="M5 13l4 4L19 7"></path>
+        </svg>
+      </div>
+    </div>
+
+    <h1 class="text-2xl font-bold text-gray-800 mb-2">Success!</h1>
+    <p class="text-gray-600 mb-6">You have been registered seccussfully! 🎉</p>
+
+    <p 
+       class="inline-block bg-blue-600 text-white font-medium px-6 py-2 rounded-lg hover:bg-blue-700 transition">
+      You can now go back to your app 
+    </p>
+  </div>
 
 </body>
 </html>
