--- a/src/forgotten-password.html
+++ b/src/forgotten-password.html
@@ -79,7 +79,7 @@
 
           try {
             const response = await fetch('https://api.strnadi.cz/forgotten-password', {
-              method: 'POST',
+              method: 'PATCH',
               headers: { 'Content-Type': 'application/json' },
               body: JSON.stringify({
                 email: this.email,
