--- a/src/forgotten-password.html
+++ b/src/forgotten-password.html
@@ -13,13 +13,6 @@
 
     <form @submit.prevent="submitForm" class="space-y-4">
       <div>
-        <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-        <input type="email" id="email" x-model="email"
-          class="mt-1 w-full rounded-lg border border-gray-300 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
-          required>
-      </div>
-
-      <div>
         <label for="new" class="block text-sm font-medium text-gray-700">New Password</label>
         <input type="password" id="new" x-model="newPassword"
           class="mt-1 w-full rounded-lg border border-gray-300 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
@@ -51,7 +44,6 @@
   <script>
     function changePasswordForm() {
       return {
-        email: '',
         newPassword: '',
         confirmPassword: '',
         error: '',
@@ -62,11 +54,6 @@
           this.success = '';
 
           // Frontend validation
-          if (!this.email.includes('@')) {
-            this.error = "Please enter a valid email.";
-            return;
-          }
-
           if (this.newPassword !== this.confirmPassword) {
             this.error = "Passwords do not match.";
             return;
@@ -77,13 +64,24 @@
             return;
           }
 
+          // Extract the JWT from the URL
+          const urlParams = new URLSearchParams(window.location.search);
+          const jwt = urlParams.get('jwt');
+
+          if (!jwt) {
+            this.error = "Missing JWT in the URL.";
+            return;
+          }
+
           try {
             const response = await fetch('https://api.strnadi.cz/forgotten-password', {
               method: 'PATCH',
-              headers: { 'Content-Type': 'application/json' },
+              headers: { 
+                'Content-Type': 'application/json',
+                'Authorization': `Bearer ${jwt}`  // Add the JWT as Bearer token
+              },
               body: JSON.stringify({
-                email: this.email,
-                password: this.newPassword
+                NewPassword: this.newPassword
               })
             });
 
@@ -95,7 +93,6 @@
 
             const data = await response.json();
             this.success = data.message || "Password changed successfully!";
-            this.email = '';
             this.newPassword = '';
             this.confirmPassword = '';
 
