--- a/src/forgotten-password.html
+++ b/src/forgotten-password.html
@@ -74,7 +74,7 @@
           }
 
           try {
-            const response = await fetch('https://api.strnadi.cz/forgotten-password', {
+            const response = await fetch('https://api.strnadi.cz/auth/change-password', {
               method: 'PATCH',
               headers: { 
                 'Content-Type': 'application/json',
